--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                            <div class="pbmit-animation-style2">
                               <img src="images/pbmit-single01.jpg" class="img-fluid" alt="">
                            </div>
-                           <div class="about-heading">Bienvenido/a a nuestro bufete de abogados especializados en derecho penal, alcoholimia e inmobiliario. <br> La disciplina, responsabilidad y compromiso en cada servicio jurídico prestado, así como el engranaje de nuestros procesos legales y su mejora continua, son la mayor garantía de satisfacción de nuestros clientes en los procesos liderados. Sin duda, el capacitado y talentoso capital humano de LEGALES, son el motor de nuestro éxito; liderado por la alta dirección, plenamente comprometida en el cumplimiento de los requisitos legales y aplicables a nuestra labor y partes interesadas, y con el excelente desempeño del Sistema de Gestión de Calidad en nuestro proceso de alcholemia.</div>
+                           <div class="about-heading">Bienvenido/@ a nuestro bufete de abogados especializados en derecho penal, alcoholemia e inmobiliario. <br> La disciplina, responsabilidad y compromiso en cada servicio jurídico prestado, así como el engranaje de nuestros procesos legales y su mejora continua, son la mayor garantía de satisfacción de nuestros clientes en los procesos liderados. Sin duda, el capacitado y talentoso capital humano de LEGALES, son el motor de nuestro éxito; liderado por la alta dirección, plenamente comprometida en el cumplimiento de los requisitos legales y aplicables a nuestra labor y partes interesadas, y con el excelente desempeño del Sistema de Gestión de Calidad en nuestro proceso de alcholemia.</div>
                         </div> 
                      </div>
                   </div>
@@ -365,7 +365,7 @@
                      <div class="col-md-6">
                         <div class="pbmit-sticky">
                            <div class="pbmit-heading text-left animation-style2">
-                              <h2 class="pbmit-title">SERVICIOS <br>Somos expertos en alcholometria, derecho civil y penal.</h2>
+                              <h2 class="pbmit-title">SERVICIOS <br>Somos expertos en alcholomia, derecho civil y penal.</h2>
                            </div>
                            <p>En nuestro equipo contamos con expertos en cada una de estas áreas, lo que nos permite ofrecer un servicio de asesoría y defensa integral a nuestros clientes.</p>
                            <a href="#" class="pbmit-btn pbmit-btn-inline">
@@ -521,7 +521,7 @@
                                           <div class="pbminfotech-box-content pbmit-text-color-white ">
                                              <div class="pbminfotech-box-number">01</div>
                                              <h3 class="pbmit-service-title">
-                                                <a href="#">Competition and Antitrust</a></h3>
+                                                <a href="#">Competencia y antimonopolio</a></h3>
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
@@ -555,7 +555,7 @@
                                           <div class="pbminfotech-box-content pbmit-text-color-white ">
                                              <div class="pbminfotech-box-number">02</div>
                                              <h3 class="pbmit-service-title">
-                                                <a href="#">Real Estate Law Firms</a></h3>
+                                                <a href="#">Real Estate inmobiliario</a></h3>
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
@@ -589,7 +589,7 @@
                                           <div class="pbminfotech-box-content pbmit-text-color-white ">
                                              <div class="pbminfotech-box-number">03</div>
                                              <h3 class="pbmit-service-title">
-                                                <a href="#">International Law & Justice</a></h3>
+                                                <a href="#">Representantes a nivel nacional</a></h3>
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
@@ -623,7 +623,7 @@
                                           <div class="pbminfotech-box-content pbmit-text-color-white ">
                                              <div class="pbminfotech-box-number">04</div>
                                              <h3 class="pbmit-service-title">
-                                                <a href="#">Marriage Contract in Law</a></h3>
+                                                <a href="#">El contrato matrimonial en Derecho</a></h3>
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
@@ -657,7 +657,7 @@
                                           <div class="pbminfotech-box-content pbmit-text-color-white ">
                                              <div class="pbminfotech-box-number">05</div>
                                              <h3 class="pbmit-service-title">
-                                                <a href="#">Legal Professional Law</a></h3>
+                                                <a href="#">Profesionales del Derecho</a></h3>
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
