--- a/derechocivil.html
+++ b/derechocivil.html
@@ -270,7 +270,7 @@
                         </div>
                         <div class="col-md-3">
                            <div class="author-name">
-                              <h2>Wilson Conde</h2>
+                              <h2>Juan D Bastidas.</h2>
                               <p>CEO de Legales</p>
                            </div>
                         </div>
@@ -428,7 +428,7 @@
             <div class="container">
                <div class="row align-items-center justify-content-between">
                   <div class="col-md-6 col-sm-12">
-                     <h3>Llámenos hoy para una consulta gratuita</h3>
+                     <h3>Escríbenos hoy y atenderemos tu consulta </h3>
                   </div>
                   <div class="col-md-6 col-sm-12 pbmit-footer-right-svg">
                      <div class="pbmit-footer-icon">
