--- a/derechoinmobiliario.html
+++ b/derechoinmobiliario.html
@@ -213,7 +213,10 @@
                        <div class="service-right-section">
                         <div class="">
                               <h4>¿En qué consiste el proceso de restitución de inmueble arrendado?</h4>
-                              <p>El proceso de Restitución de inmueble arrendado, código general del proceso, en este caso la pregunta seria</p>
+                              <p>Cuando el arrendatario se niega a restituir el inmueble estando obligado, el arrendador debe demandarlo para que un juez ordene el lanzamiento, demanda proceso conocido precisamente como restitución de inmueble.<br>
+                              El proceso de restitución de inmueble está regulado por el artículo 384 del código general del proceso que fija las reglas que se deben seguir para tramitar la demanda de restitución de inmueble.<br>
+                              El procedimiento allí expuesto aplica para el arrendamiento de vivienda urbana, de locales comerciales e incluso a muebles arrendados, o respecto a cualquier caso de muebles dados en tenencia mediante figuras distintas al arrendamiento, tal como lo dispone el artículo 385 del código general del proceso.
+                              </p>
                            </div>
                            <div class="accordion" id="accordionExample">
                               <div class="accordion-item active">
@@ -306,10 +309,10 @@
                <div class="container">
                   <div class="pbmit-mask-animation wrapper pbmit-mask-animation-style-1">
                      <div class="pbmit-text-mask-animation">
-                        <h2 class="pbmit-element-title">Adquiera o de en arriendo su inmueble, contamos con trayectoria en el mercado, siempre actualizados y con apoyo de profesionales en el ramo!! </h2>
+                        <h2 class="pbmit-element-title">Cada propiedad cuenta una historia única. Permítenos ayudarte a escribir la tuya </h2>
                      </div>
                      <div class="pbmit-text-mask-animation pbmit-shadow" aria-hidden="true">
-                        <h2 class="pbmit-element-title">Adquiera o de en arriendo su inmueble, contamos con trayectoria en el mercado, siempre actualizados y con apoyo de profesionales en el ramo!!</h2>
+                        <h2 class="pbmit-element-title">Cada propiedad cuenta una historia única. Permítenos ayudarte a escribir la tuya</h2>
 
                      </div>
                   </div>
@@ -324,7 +327,7 @@
                         </div>
                         <div class="col-md-3">
                            <div class="author-name">
-                              <h2>Wilson Conde</h2>
+                              <h2>Juan D Bastidas.</h2>
                               <p>CEO de Legales</p>
                            </div>
                         </div>
@@ -344,7 +347,7 @@
             <div class="container">
                <div class="row align-items-center justify-content-between">
                   <div class="col-md-6 col-sm-12">
-                     <h3>Llámenos hoy para una consulta gratuita</h3>
+                     <h3>Escríbenos hoy y atenderemos tu consulta </h3>
                   </div>
                   <div class="col-md-6 col-sm-12 pbmit-footer-right-svg">
                      <div class="pbmit-footer-icon">
