--- a/faq.html
+++ b/faq.html
@@ -159,7 +159,7 @@
                        <div class="service-right-section">
                         <div class="">
                               <h4>¿Que debo hacer para tener una cita y expresar todo mi problema?</h4>
-                              <p>El proceso de Restitución de inmueble arrendado, código general del proceso, en este caso la pregunta seria</p>
+                              <p>Escríbenos a nuestro WhatsApp y programaremos un espacio personalizado para ti.</p>
                            </div>
                            <div class="accordion" id="accordionExample">
                               <div class="accordion-item active">
@@ -171,9 +171,7 @@
                                  <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
                                     <div class="accordion-body">
                                       
-                                 El contrato de arrendamiento de inmuebles es un contrato bilateral o sea entre dos partes: por una parte el arrendatario o propietario y por la otra el arrendador que es quien paga el precio por tener el uso del inmueble para disfrutar del bien dado en arrendamiento, con la obligación de entregarlo o restituir en el mismo estado de conservación en que fue recibido en términos generales. En caso de incumplimiento por parte del arrendador, el arrendatario puede pedir la entrega del bien inmueble arrendado o sea la restitución forzada y obligatoria del mismo, basado en las causales establecidas en la ley. Cumpliéndose así la terminación de contrato de arrendamiento
-
-                                 Si eres arrendador y el arrendatario no te paga el canon, es hora de contratarnos y lograr así su restitución y pago de todo lo adeudada conforme el contrato en términos generales. Cualquier problema que tengas en materia de arrendamientos contáctanos!
+                                Si con Legales firma de abogados te acompañamos de la  A la para resolver cualquier situación con tu empresa
                                     </div>
                                  </div>
                               </div>
@@ -185,7 +183,7 @@
                                  </h2>
                                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
-                                    En Derecho civil según el código civil, Se caracteriza por ser un proceso en que se establece un gravamen sobre una propiedad para permitir el tránsito por el mismo o el paso de aguas para el beneficio de otro predio colindante. Si tienes la necesidad de pasar por un predio ajeno y sin posibilidad de hacerlo por otro lado o necesitas agua en tu predio que no lo tiene estamos a tu servicio para adelantar y realizar el proceso de servidumbre correspondiente.
+                                    Si, ingrese en este enlace para llenar el formulario APLICACIÓN SERVICIO DE GARANTE.
                                     </div>
                                  </div>
                               </div>
@@ -259,7 +257,7 @@
             <div class="container">
                <div class="row align-items-center justify-content-between">
                   <div class="col-md-6 col-sm-12">
-                     <h3>Llámenos hoy para una consulta gratuita</h3>
+                     <h3>Escríbenos hoy y atenderemos tu consulta </h3>
                   </div>
                   <div class="col-md-6 col-sm-12 pbmit-footer-right-svg">
                      <div class="pbmit-footer-icon">
