--- a/index.html
+++ b/index.html
@@ -352,7 +352,8 @@
                            <div class="pbmit-animation-style2">
                               <img src="images/pbmit-single01.jpg" class="img-fluid" alt="">
                            </div>
-                           <div class="about-heading">Bienvenido/@ a nuestro bufete de abogados especializados en derecho penal, alcoholemia e inmobiliario. <br> La disciplina, responsabilidad y compromiso en cada servicio jurídico prestado, así como el engranaje de nuestros procesos legales y su mejora continua, son la mayor garantía de satisfacción de nuestros clientes en los procesos liderados. Sin duda, el capacitado y talentoso capital humano de LEGALES, son el motor de nuestro éxito; liderado por la alta dirección, plenamente comprometida en el cumplimiento de los requisitos legales y aplicables a nuestra labor y partes interesadas, y con el excelente desempeño del Sistema de Gestión de Calidad en nuestro proceso de alcholemia.</div>
+                           <div class="about-heading">Bienvenido/@ a nuestro bufete de abogados especializados en derecho penal, civil, alcoholemia e inmobiliario.
+                           <br>La disciplina, responsabilidad y compromiso en cada servicio jurídico prestado, así como el engranaje de nuestros procesos legales y su mejora continua, son la mayor garantía de satisfacción de nuestros clientes en los procesos liderados. Sin duda, el capacitado y talentoso capital humano de LEGALES, son el motor de nuestro éxito; liderado por la alta dirección, plenamente comprometida en el cumplimiento de los requisitos legales. </div>
                         </div> 
                      </div>
                   </div>
@@ -434,7 +435,7 @@
                               <div class="pbminfotech-post-item-inner">
                                  <div class="pbminfotech-box-content">
                                     <div class="pbminfotech-box-content-inner">
-                                       <h3 class="pbmit-service-title">Derecho penal - Corporativo </h3>
+                                       <h3 class="pbmit-service-title">Derecho penal - Coorporativo </h3>
                                     </div>
                                  </div>
                                  <div class="pbmit-service-content">
@@ -521,11 +522,11 @@
                                           <div class="pbminfotech-box-content pbmit-text-color-white ">
                                              <div class="pbminfotech-box-number">01</div>
                                              <h3 class="pbmit-service-title">
-                                                <a href="#">Competencia y antimonopolio</a></h3>
+                                                <a>ALCOHOLEMIA / DEFENSA EN PROCEDIMIENTOS DE ALCOHOLEMIA EN GRADO 3 </a></h3>
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
-                                                   Diam magna consectetur nunc tristique consequat. Integer venenatis nec rutrum.
+                                                  El procedimiento, por el cual determinaron tu grado de alcoholemia es la clave, siempre debes presentarte a cumplir la orden de comparendo dentro de los cinco (5) días hábiles siguientes a la notificación, a rechazar el comparendo, no te preocupes en adelante nos encargamos nosotros. Proceso exprés en alcoholemia: la viabilidad de éxito de nuestra representación, está ligada mayormente a aspecto procedimental, el valor de representación se define en una ampliación de los hechos, para lo cual el usuario obtendrá en crédito, el valor de la viabilidad inicial.
                                                 </p>
                                                 <div class="at-below-post-homepage addthis_tool"></div>
                                              </div>
@@ -555,11 +556,11 @@
                                           <div class="pbminfotech-box-content pbmit-text-color-white ">
                                              <div class="pbminfotech-box-number">02</div>
                                              <h3 class="pbmit-service-title">
-                                                <a href="#">Real Estate inmobiliario</a></h3>
+                                                <a href="#">DERECHO PENAL / DEFENSAS ANTE FISCALIA INSTACIAS PRELIMINARES</a></h3>
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
-                                                   Diam magna consectetur nunc tristique consequat. Integer venenatis nec rutrum.
+                                                   LEGALES se destaca por su excelencia en defensas penales de grandes envergaduras a nivel nacional. Nuestro equipo de abogados es reconocido por su seriedad, compromiso, vocación y formación académica. La ética, responsabilidad y solvencia profesional son los pilares en los que nuestros clientes confían al solicitar nuestros servicios en el complejo ámbito del proceso penal, ya sea como defensores o representantes de víctimas. Nuestra amplia experiencia en asuntos jurídico-penales nos sitúa a la vanguardia de las consultorías y servicios legales especializados en esta rama del Derecho.
                                                 </p>
                                                 <div class="at-below-post-homepage addthis_tool"></div>
                                              </div>
@@ -589,11 +590,11 @@
                                           <div class="pbminfotech-box-content pbmit-text-color-white ">
                                              <div class="pbminfotech-box-number">03</div>
                                              <h3 class="pbmit-service-title">
-                                                <a href="#">Representantes a nivel nacional</a></h3>
+                                                <a href="#">DERECHO INMOBILIARIO / RESOLUCION DE CONFLICTOS ENTRE ARRENDADORES Y ARRENDATARIOS EN TODAS SUS INSTANCIAS </a></h3>
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
-                                                   Diam magna consectetur nunc tristique consequat. Integer venenatis nec rutrum.
+                                                   El ejercicio del Derecho se ha caracterizado por ser una profesión multidisciplinaria, ya que su área de acción es muy amplia, diversificada y se adapta a los diferentes escenarios que en el ámbito legal van surgiendo. En muchas ocasiones requerimos de vender, comprar o alquilar un inmueble, operación que pareciera ser sencilla y cotidiana, pero demanda diversos trámites legales que incluyen hasta la redacción de documentos, que solo un profesional del derecho con conocimientos específicos en el área inmobiliaria podría resolver con satisfacción. 
                                                 </p>
                                                 <div class="at-below-post-homepage addthis_tool"></div>
                                              </div>
@@ -623,11 +624,11 @@
                                           <div class="pbminfotech-box-content pbmit-text-color-white ">
                                              <div class="pbminfotech-box-number">04</div>
                                              <h3 class="pbmit-service-title">
-                                                <a href="#">El contrato matrimonial en Derecho</a></h3>
+                                                <a href="#">DERECHO CIVIL / RESOLUCCION DE CONTRATOS, SUCECIONES</a></h3>
                                              <div class="pbmit-service-content">
                                                 <div class="at-above-post-homepage addthis_tool"></div>
                                                 <p>
-                                                   Diam magna consectetur nunc tristique consequat. Integer venenatis nec rutrum.
+                                                  En primer término, nuestra firma Abogados Civilistas con experiencia, se esmera en brindar el mejor servicio de asesoría, consultoría y acompañamiento con Abogados en Derecho Civil en Medellín y Antioquia. Por tal circunstancia, contamos con, Juristas con Destreza en solución de Asuntos de índole Procesal, los cuales, le representamos en el área de Del valle de Aburrá. Medellín, Sabaneta, Envigado, Itagüí y demás municipios de Antioquia.
                                                 </p>
                                                 <div class="at-below-post-homepage addthis_tool"></div>
                                              </div>
@@ -642,40 +643,7 @@
                                     </div>
                                  </article>
                               </div>
-                              <div class="swiper-slide">
-                                 <!-- Slide5 -->
-                                 <article class="pbmit-service-style-1">
-                                    <div class="pbminfotech-post-item">
-                                       <div class="d-flex">
-                                          <div class="pbmit-service-image-wrapper" style="background-image:url('images/services/service-05.jpg')">
-                                             <div class="pbmit-featured-img-wrapper">
-                                                <div class="pbmit-featured-wrapper">
-                                                   <img src="images/services/service-05.jpg" class="img-fluid" alt="">
-                                                </div>
-                                             </div>
-                                          </div>
-                                          <div class="pbminfotech-box-content pbmit-text-color-white ">
-                                             <div class="pbminfotech-box-number">05</div>
-                                             <h3 class="pbmit-service-title">
-                                                <a href="#">Profesionales del Derecho</a></h3>
-                                             <div class="pbmit-service-content">
-                                                <div class="at-above-post-homepage addthis_tool"></div>
-                                                <p>
-                                                   Diam magna consectetur nunc tristique consequat. Integer venenatis nec rutrum.
-                                                </p>
-                                                <div class="at-below-post-homepage addthis_tool"></div>
-                                             </div>
-                                             <div class="pbmit-service-icon-wrapper">
-                                                <i class="pbmit-attorly-icon pbmit-attorly-icon-courthouse-1"></i>         
-                                             </div>
-                                             <div class="pbmit-service-btn"> 
-                                                <a class="btn-arrow" href="#"></a>
-                                             </div>
-                                          </div>
-                                       </div>
-                                    </div>
-                                 </article>
-                              </div>
+                              
                            </div>                   
                         </div>
                      </div>
@@ -691,45 +659,32 @@
                         <div class="swiper-slide">
                            <article class="pbmit-marquee-effect pbmit-marquee-effect-style-1">
                               <div class="pbmit-tag-wrapper">
-                                 <h2 class="pbmit-element-title"> Derecho Civil Corporativo </h2>
+                                 <h2 class="pbmit-element-title">DERECHO INMOBILIARIO</h2>
                               </div>
                            </article>
                         </div>
                         <div class="swiper-slide">
                            <article class="pbmit-marquee-effect pbmit-marquee-effect-style-1">
                               <div class="pbmit-tag-wrapper">
-                                 <h2 class="pbmit-element-title"> Derecho Inmobiliario </h2>
+                                 <h2 class="pbmit-element-title"> -DERECHO PENAL </h2>
                               </div>
                            </article>
                         </div>
                         <div class="swiper-slide">
                            <article class="pbmit-marquee-effect pbmit-marquee-effect-style-1">
                               <div class="pbmit-tag-wrapper">
-                                 <h2 class="pbmit-element-title"> Matrimonios, Divorcios, adquisición de bienes </h2>
+                                 <h2 class="pbmit-element-title"> -DERECHO CIVIL </h2>
                               </div>
                            </article>
                         </div>
                         <div class="swiper-slide">
                            <article class="pbmit-marquee-effect pbmit-marquee-effect-style-1">
                               <div class="pbmit-tag-wrapper">
-                                 <h2 class="pbmit-element-title"> Constitución de empresas </h2>
+                                 <h2 class="pbmit-element-title"> -PROCEDIMIENTO DE ALCOHOLEMIA </h2>
                               </div>
                            </article>
                         </div>
-                        <div class="swiper-slide">
-                           <article class="pbmit-marquee-effect pbmit-marquee-effect-style-1">
-                              <div class="pbmit-tag-wrapper">
-                                 <h2 class="pbmit-element-title"> Contrataciones, Solución de sonflictos empleado / empleador </h2>
-                              </div>
-                           </article>
-                        </div>
-                        <div class="swiper-slide">
-                           <article class="pbmit-marquee-effect pbmit-marquee-effect-style-1">
-                              <div class="pbmit-tag-wrapper">
-                                 <h2 class="pbmit-element-title"> Asesoria y acompañamiento en alcoholemia </h2>
-                              </div>
-                           </article>
-                        </div>
+                        
                      </div>
                   </div>
                </div>
@@ -963,7 +918,7 @@
                                        <div class="pbminfotech-box-desc">
                                           <blockquote class="pbminfotech-testimonial-text">
                                              <div class="at-above-post-homepage addthis_tool"></div>
-                                             <p>“Legales, es uno de los bufete de abogados principales de Medellín y representa a clientes locales con seriedad y compromiso.”</p>
+                                             <p>“¡Gracias a Legales firma de abogados hoy puedo dormir tranquila, muchísimas gracias muy recomendados!”</p>
                                              <div class="at-below-post-homepage addthis_tool"></div>
                                           </blockquote>
                                        </div>
@@ -1001,7 +956,7 @@
                                        <div class="pbminfotech-box-desc">
                                           <blockquote class="pbminfotech-testimonial-text">
                                              <div class="at-above-post-homepage addthis_tool"></div>
-                                             <p>“Soy un cliente reciente de Legales. Estuve agradecido cuando escuché que mi caso fue desestimado. gracias a la calidad del trabajo de la firma de abogados Legales.”</p>
+                                             <p>“Estoy feliz de haber podido contar con los servicios profesionales de Legales firma de abogados en mi proceso de alcoholemia, tengo mi licencia nuevamente.”</p>
                                              <div class="at-below-post-homepage addthis_tool"></div>
                                           </blockquote>
                                        </div>
@@ -1078,7 +1033,7 @@
                                        <div class="pbminfotech-box-desc">
                                           <blockquote class="pbminfotech-testimonial-text">
                                              <div class="at-above-post-homepage addthis_tool"></div>
-                                             <p>“Atente contra la seguridad publica, puse en riesgo mi vida y la de muchos ciudadanos, aun asi Legales me represento, los recomiendo.”</p>
+                                             <p>“Muy buena representación muchas gracias, muy cumplidos.”</p>
                                              <div class="at-below-post-homepage addthis_tool"></div>
                                           </blockquote>
                                        </div>
@@ -1208,7 +1163,7 @@
             <div class="container">
                <div class="row align-items-center justify-content-between">
                   <div class="col-md-6 col-sm-12">
-                     <h3>Llámenos hoy para una consulta gratuita</h3>
+                     <h3>Escríbenos hoy y atenderemos tu consulta </h3>
                   </div>
                   <div class="col-md-6 col-sm-12 pbmit-footer-right-svg">
                      <div class="pbmit-footer-icon">
