--- a/contact-us.html
+++ b/contact-us.html
@@ -159,14 +159,14 @@
                <div class="row g-0">
                   <div class="col-xl-4 col-md-12">
                      <div class="contacticon-box">
-                        <p>Escribenos</p>
+                        <p>Escribenos via whatsapp</p>
                         <h2>302 623 1220</h2>
                      </div>
                   </div>
                   <div class="col-xl-4 col-md-12">
                      <div class="contacticon-box  icon-box-one">
                         <div>
-                           <p>EMAIL</p>
+                           <p>Correo</p>
                            <h2>hello@legales.com.co</h2>
                         </div>
                      </div>
@@ -174,7 +174,7 @@
                   <div class="col-xl-4 col-md-12">
                      <div class="contacticon-box icon-box-two">
                         <p>Ubicados en</p>
-                        <h2>Poblado, Medellín <br> Colombia </h2>
+                        <h4>Centro comercial y empresarial  Obelisco P H  Carrera 74 # 48-37 oficina 329. <br> Barrio Laureles Estadio, Medellín, Colombia </h4>
                      </div>
                   </div>
                </div>
@@ -235,7 +235,7 @@
             <div class="container">
                <div class="row align-items-center justify-content-between">
                   <div class="col-md-6 col-sm-12">
-                     <h3>Llámenos hoy para una consulta gratuita</h3>
+                     <h3>Escríbenos hoy y atenderemos tu consulta </h3>
                   </div>
                   <div class="col-md-6 col-sm-12 pbmit-footer-right-svg">
                      <div class="pbmit-footer-icon">
