--- a/derechopenal.html
+++ b/derechopenal.html
@@ -188,7 +188,7 @@
                         <img src="images/services/service-03.jpg" class="w-100" alt="">
                         <div class="service-details">
                            <h4 class="pbmit-title mb-3">Derecho penal</h4>
-                           <p>LEGES se destaca por su excelencia en defensas y asesorías penales a nivel nacional. Nuestro equipo de abogados es reconocido por su seriedad, compromiso, vocación y formación académica. La ética, responsabilidad y solvencia profesional son los pilares en los que nuestros clientes confían al solicitar nuestros servicios en el complejo ámbito del proceso penal, ya sea como defensores o representantes de víctimas. Nuestra amplia experiencia en asuntos jurídico-penales nos sitúa a la vanguardia de las consultorías y servicios legales especializados en esta rama del Derecho.</p>
+                           <p>LEGALES se destaca por su excelencia en defensas y asesorías penales a nivel nacional. Nuestro equipo de abogados es reconocido por su seriedad, compromiso, vocación y formación académica. La ética, responsabilidad y solvencia profesional son los pilares en los que nuestros clientes confían al solicitar nuestros servicios en el complejo ámbito del proceso penal, ya sea como defensores o representantes de víctimas. Nuestra amplia experiencia en asuntos jurídico-penales nos sitúa a la vanguardia de las consultorías y servicios legales especializados en esta rama del Derecho.</p>
                            <p><span class="globalcolor"><u> Derecho Penal Corporativo</u></span> <br>En LEGALES, ofrecemos asesoría en derecho penal empresarial, brindando un acompañamiento constante a las empresas en los casos delictuales más frecuentes que afectan su desarrollo. Entendemos que en las operaciones diarias de una empresa existe la posibilidad de que se cometan delitos que perjudiquen los intereses de la compañía y sus accionistas. Por esta razón, estamos comprometidos en brindar orientación legal en asuntos penales a las empresas, ofreciendo los siguientes servicios:
                            </p>
                            
@@ -431,7 +431,7 @@
             <div class="container">
                <div class="row align-items-center justify-content-between">
                   <div class="col-md-6 col-sm-12">
-                     <h3>Llámenos hoy para una consulta gratuita</h3>
+                     <h3>Escríbenos hoy y atenderemos tu consulta </h3>
                   </div>
                   <div class="col-md-6 col-sm-12 pbmit-footer-right-svg">
                      <div class="pbmit-footer-icon">
